2013-05-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Address some GCC-4.7 string initialisation warnings.

	* src/pkglist.cpp (AppWindowMaker::InitPackageListView): Declare all
	headings[].text initialisers as 'const'; cast to 'char *' as required.
	(pkgListViewMaker::Dispatch): Ditto, when inserting the 'const' empty
	string into the list, as a component class value.

	* src/pkgdata.cpp (AppWindowMaker::InitPackageTabControl): Declare all
	TabLegend[] initialisers as 'const'; cast to 'char *' as required.

2013-05-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a spin wait thread synchronisation issue.

	* src/pkgnget.cpp (pkgDownloadMeterGUI::SpinWait): Handle stop
	requests explicitly; acknowledge when waiting thread has stopped.
	(pkgDownloadMeterGUI::SpinWaitAction): Raise explicit stop requests;
	wait for acknowledgement that waiting thread has stopped.

2013-04-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Select compressed data streaming filters for use by setup tool.

	* src/pkgstrm.cpp [IMPLEMENTATION_LEVEL != PACKAGE_BASE_COMPONENT]:
	Exclude the implementations of all decompression filters, except...
	(pkgXzArchiveStream): ...this, together with its requisite methods...
	(pkgArchiveStream, pkgLzmaArchiveStream): ...from these.

2013-04-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adapt internet download agent for use by setup tool.

	* src/pkgbase.h: More code rearrangement, exposing...
	(safe_strcmp): ...this in any implementation context, controlled...
	[USES_SAFE_STRCMP && ! HAVE_SAFE_STRCMP]: ...by this; when true...
	(HAVE_SAFE_STRCMP): ...define this to 1, (must be non-zero).
	[IMPLEMENTATION_LEVEL == PACKAGE_BASE_COMPONENT]: Ensure that...
	(USES_SAFE_STRCMP): ...this is defined to 1, (i.e. non-zero).
	(EXTERN_C): Relocate macro definition...
	* src/pkgimpl.h: ...to here; add complementary implementation of...
	(BEGIN_C_DECLS, END_C_DECLS): ...these new macros; define them.
